# n-fdl

./: .cortexignore  .gitignore  Cargo.toml  PRODUCTION_CHECKLIST.md  README.md
.github/workflows/: ci.yml
crates/airpulse_dsl-catalog/: Cargo.toml
crates/airpulse_dsl-catalog/src/: causes.rs  events.rs  helpers.rs  lib.rs  problems.rs
crates/airpulse_dsl-catalog/tests/: catalog.rs
crates/airpulse_dsl-evaluator/: Cargo.toml
crates/airpulse_dsl-evaluator/src/: binding.rs  diag.rs  engine.rs  error.rs  evidence.rs  extract.rs  fixtures.rs  interner.rs  lib.rs  predicate.rs  sarif.rs  schema.rs  sink.rs  topology.rs
crates/airpulse_dsl-evaluator/tests/: count_window.rs  golden.rs  golden_pipeline.rs  late_events.rs  properties.rs  sarif.rs  topology_t3.rs
crates/airpulse_dsl-evaluator/tests/golden/_stubs/: 08-stp-companion-decision.adgl  README.md  stubs.rs
crates/airpulse_dsl-evaluator/tests/snapshots/: golden_pipeline__g01_absent_sarif.snap  golden_pipeline__g01_absent_snapshot.snap  golden_pipeline__g01_present_sarif.snap  golden_pipeline__g01_present_snapshot.snap  golden_pipeline__g02_sarif.snap  golden_pipeline__g02_snapshot.snap  golden_pipeline__g03_sarif.snap  golden_pipeline__g03_snapshot.snap  golden_pipeline__g04_sarif.snap  golden_pipeline__g04_snapshot.snap  golden_pipeline__g06_sarif.snap  golden_pipeline__g06_snapshot.snap  golden_pipeline__g07_sarif.snap  golden_pipeline__g07_snapshot.snap  golden_pipeline__g08_sarif.snap  golden_pipeline__g08_snapshot.snap  sarif__g01_minimal_sarif.snap
crates/airpulse_dsl-fuzz/: Cargo.toml  README.md
crates/airpulse_dsl-fuzz/src/: lib.rs
crates/airpulse_dsl-ir/: Cargo.toml
crates/airpulse_dsl-ir/src/: image.rs  intent.rs  lib.rs  predicate.rs  rule.rs  symbol.rs
crates/airpulse_dsl-ir/tests/: ir.rs
crates/airpulse_dsl-store/: Cargo.toml
crates/airpulse_dsl-store/src/: diag.rs  event.rs  lib.rs  limits.rs  ring.rs  store.rs  subgraph.rs  waitqueue.rs
crates/airpulse_dsl-store/tests/: store.rs
crates/airpulse_dsl-syntax/: Cargo.toml
crates/airpulse_dsl-syntax/src/: ast.rs  include.rs  lib.rs  parser.rs
crates/airpulse_dsl-syntax/tests/: durations.rs  error_recovery.rs  error_suggestions.rs  having.rs  include.rs  negative.rs  parse_examples.rs  precedence.rs
crates/airpulse_dsl-syntax/tests/fixtures/include/cycle/: a.adgl  b.adgl
crates/airpulse_dsl-syntax/tests/fixtures/include/diamond/: entry.adgl  left.adgl  right.adgl  shared.adgl
crates/airpulse_dsl-syntax/tests/fixtures/include/ok/: main.adgl
crates/airpulse_dsl-syntax/tests/snapshots/: error_recovery__snapshot_recovery_diagnostics.snap  parse_examples__01-pmtud-blackhole.adgl.snap  parse_examples__02-tcp-retrans-seed.adgl.snap  parse_examples__03-auth-outage-impact.adgl.snap  parse_examples__04-dhcp-missing-auth.adgl.snap  parse_examples__05-crc-link-flap.adgl.snap  parse_examples__06-link-absent.adgl.snap  parse_examples__07-suppress-downstream.adgl.snap  parse_examples__08-stp-tcp-burst.adgl.snap  parse_examples__09-ap-deauth-missing-rf.adgl.snap  parse_examples__10-ambiguity-demo.adgl.snap
crates/airpulse_dsl-types/: Cargo.toml
crates/airpulse_dsl-types/src/: catalog.rs  confidence.rs  ids.rs  lib.rs  scope.rs  severity.rs  t3.rs  time.rs  value_encoding.rs
crates/airpulse_dsl-verify/: Cargo.toml
crates/airpulse_dsl-verify/src/: lib.rs
crates/airpulse_dsl-verify/tests/: count_window_spike.rs  having.rs  verify.rs
crates/ndsl-cli/: Cargo.toml
crates/ndsl-cli/src/: main.rs
crates/ndsl-clippy/: Cargo.toml
crates/ndsl-clippy/src/: adgl.rs  attrs.rs  builtin.rs  lib.rs  nfdl.rs  render.rs
crates/ndsl-diag/: Cargo.toml
crates/ndsl-diag/src/: lib.rs  sarif.rs
crates/ndsl-fmt/: Cargo.toml
crates/ndsl-fmt/src/: adgl.rs  lib.rs
crates/ndsl-trivia/: Cargo.toml
crates/ndsl-trivia/src/: lib.rs
crates/nfdl-bytecode/: Cargo.toml
crates/nfdl-bytecode/src/: lib.rs
crates/nfdl-cli/: Cargo.toml
crates/nfdl-cli/src/: main.rs
crates/nfdl-diag/: Cargo.toml
crates/nfdl-diag/src/: lib.rs
crates/nfdl-fuzz/: Cargo.toml
crates/nfdl-fuzz/src/: differential.rs  fuzz_full.rs  fuzz_parser.rs  fuzz_vm.rs  lib.rs
crates/nfdl-ir/: Cargo.toml
crates/nfdl-plugin/: Cargo.toml
crates/nfdl-plugin/src/: abi.rs  dns_decompress.rs  lib.rs  registry.rs  verify.rs
crates/nfdl-runtime/: Cargo.toml
crates/nfdl-runtime/src/: bytecode.rs  context.rs  continuation.rs  efsm.rs  error.rs  event_bus.rs  integration.rs  lib.rs  reassembly.rs  runner.rs  session.rs  vm.rs
crates/nfdl-runtime/tests/: bytecode.rs  continuation.rs  efsm.rs  event_bus.rs  execute.rs  fsm_integration.rs  golden.rs  integration.rs  phase2_fixes.rs  phase3_features.rs  phase4_hardening.rs  phase5_finalization.rs  reassembly.rs  runner.rs  session.rs
crates/nfdl-syntax/: Cargo.toml
crates/nfdl-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  parser_transition_fix.rs
crates/nfdl-syntax/tests/: bitfield_if_snapshots.rs  error_recovery.rs  error_suggestions.rs
crates/nfdl-types/: Cargo.toml
crates/nfdl-verify/: Cargo.toml
crates/nfdl-verify/src/: bounds.rs  lib.rs  wiring.rs  z3_backend.rs
crates/nfdl-vm/: Cargo.toml
docs/adr/: ADR-002-surface-syntax-corrections.md  ADR-009-plugin-record-types.md  ADR-013-dual-track-treesitter.md  ADR-014-wave0-lint-attr-directives.md  ADR-list-critical-decisions.md
docs/examples/: README.md  arp.nfdl  diameter.nfdl  gtpu.nfdl  radius.nfdl  tcp.nfdl  udp_dns.nfdl
docs/idea/: README.md
docs/plans/: correctness-refinements.md  dos-vectors.md  traceability-matrix.md
docs/spec/: 01-lexical.md  02-grammar.ebnf  03-semantics.md  04-type-system.md  05-verification.md  06-ir-bytecode.md  07-runtime.md  08-stream-reassembly.md  09-efsm-sessions.md  10-plugin-abi.md  11-error-diagnostics.md  12-testing.md  13-roadmap.md
docs/tooling/: includes.md  lints.md
editors/vscode/: readme.md
grammars/tree-sitter-adgl/: README.md  grammar.js  package.json  tree-sitter.json
grammars/tree-sitter-nfdl/: README.md  grammar.js  package.json  tree-sitter.json
scripts/: check_grammar_conformance.sh  release-gate.sh
(+74 files in other folders)
