[workspace]
members = [
    "crates/airpulse_dsl-fuzz",
    "crates/airpulse_dsl-catalog",
    "crates/airpulse_dsl-evaluator",
    "crates/airpulse_dsl-ir",
    "crates/airpulse_dsl-store",
    "crates/airpulse_dsl-syntax",
    "crates/airpulse_dsl-types",
    "crates/ndsl-diag",
    "crates/ndsl-trivia",
    "crates/ndsl-clippy",
    "crates/nfdl-fuzz",
    "crates/nfdl-syntax",
    "crates/nfdl-types",
    "crates/nfdl-verify",
    "crates/nfdl-ir",
    "crates/nfdl-bytecode",
    "crates/nfdl-vm",
    "crates/nfdl-runtime",
    "crates/nfdl-diag",
    "crates/nfdl-cli", "crates/airpulse_dsl-verify",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Aleksandr Loshkarev <mailbox@aloshkarev.com>"]

[workspace.dependencies]
ndsl-diag = { path = "crates/ndsl-diag" }
ndsl-trivia = { path = "crates/ndsl-trivia" }
ndsl-clippy = { path = "crates/ndsl-clippy" }
dashmap = "6"
winnow = "0.7"
insta = "1"
ariadne = "0.4"
# общие зависимости позже
