[package]
name = "airpulse_dsl-syntax"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "airpulse_dsl_syntax"
path = "src/lib.rs"

[dependencies]
# concrete versions (matching workspace.dependencies) so this crate can be
# consumed as a path dependency from the parent AirPulse workspace
winnow = "0.7"
airpulse_dsl-types = { path = "../airpulse_dsl-types" }
ndsl-diag = { path = "../ndsl-diag" }

[dev-dependencies]
insta = "1"
