[package]
name = "airpulse_dsl-verify"
version = "0.1.0"
# concrete values (matching workspace.package) for cross-workspace path-dep use
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Aleksandr Loshkarev <mailbox@aloshkarev.com>"]

[lib]
name = "airpulse_dsl_verify"
path = "src/lib.rs"

[dependencies]
airpulse_dsl-syntax = { path = "../airpulse_dsl-syntax" }
airpulse_dsl-types = { path = "../airpulse_dsl-types" }
airpulse_dsl-ir = { path = "../airpulse_dsl-ir" }
airpulse_dsl-catalog = { path = "../airpulse_dsl-catalog" }
ndsl-diag = { path = "../ndsl-diag" }
ariadne = "0.4"

[dev-dependencies]
airpulse_dsl-evaluator = { path = "../airpulse_dsl-evaluator" }
airpulse_dsl-store = { path = "../airpulse_dsl-store" }
